add changes in ui

--- a/src/index.css
+++ b/src/index.css
@@ -132,3 +132,12 @@
   height: 100%;
   object-fit: contain; /* prevents cropping */
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
